# solana-basic

./: Cargo.toml
cli/: index.ts  package.json
src/: lib.rs
