[package]
name = "solana-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.11"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"

[lib]
create-type = ["cdylib", "lib"]